# MC_Assignment3

./: README.md  build.gradle.kts  cleanup.bat  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  matrix_operations.cpp  matrix_operations.h
app/src/main/java/com/example/matrixcalculator/: MainActivity.kt  MatrixOperations.kt
app/src/main/java/com/example/matrixcalculator/model/: Matrix.kt
app/src/main/java/com/example/matrixcalculator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/matrixcalculator/viewmodel/: MatrixViewModel.kt
app/src/main/java/com/example/mc_assignment3/: MainActivity.kt
app/src/main/java/com/example/mc_assignment3/ui/theme/: Theme.kt
app/src/main/java/com/example/wifisignallogger/: ComparisonActivity.kt  MainActivity.kt  ScanActivity.kt
app/src/main/java/com/example/wifisignallogger/adapter/: LocationAdapter.kt  WifiMatrixAdapter.kt
app/src/main/java/com/example/wifisignallogger/data/database/: AppDatabase.kt  LocationDao.kt  (+1 more)
app/src/main/java/com/example/wifisignallogger/util/: WifiScanner.kt
app/src/main/res/drawable/: error_background.xml  result_background.xml  result_cell_backgroud.xml
app/src/main/res/layout/: activity_comparison.xml  activity_main.xml  activity_scan.xml  item_location.xml  item_wifi_matrix_cell.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values_night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
